T Compiler/tests/phase3tests/error/bogusExtends.t
class A extends Obj
{
  int i;
}

int main()
{
}
